// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a simple Vimeo Video 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="react-plyr"
    style={undefined}
>
    <div
        data-type="vimeo"
        data-video-id="https://vimeo.com/189789787"
    />
</div>,
  "nodes": Array [
    <div
      className="react-plyr"
      style={undefined}
>
      <div
            data-type="vimeo"
            data-video-id="https://vimeo.com/189789787"
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Plyr
        autoplay={false}
        clickToPlay={true}
        controls={
                Array [
                        "play-large",
                        "play",
                        "progress",
                        "current-time",
                        "mute",
                        "volume",
                        "captions",
                        "fullscreen",
                      ]
        }
        debug={false}
        disableContextMenu={true}
        displayDuration={true}
        duration={null}
        enabled={true}
        hideControls={true}
        iconPrefix="plyr"
        iconUrl={null}
        keyboardShortcuts={
                Object {
                        "focused": true,
                        "global": false,
                      }
        }
        loadSprite={true}
        seekTime={10}
        showPosterOnEnd={false}
        storage={
                Object {
                        "enabled": true,
                        "key": "plyr_volume",
                      }
        }
        tooltips={
                Object {
                        "controls": false,
                        "seek": true,
                      }
        }
        type="vimeo"
        videoId="https://vimeo.com/189789787"
        volume={5}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Plyr {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "getCurrentTime": [Function],
        "getDuration": [Function],
        "getType": [Function],
        "getVolume": [Function],
        "isMuted": [Function],
        "isPaused": [Function],
        "isReady": [Function],
        "pause": [Function],
        "play": [Function],
        "player": null,
        "props": Object {
          "autoplay": false,
          "clickToPlay": true,
          "controls": Array [
            "play-large",
            "play",
            "progress",
            "current-time",
            "mute",
            "volume",
            "captions",
            "fullscreen",
          ],
          "debug": false,
          "disableContextMenu": true,
          "displayDuration": true,
          "duration": null,
          "enabled": true,
          "hideControls": true,
          "iconPrefix": "plyr",
          "iconUrl": null,
          "keyboardShortcuts": Object {
            "focused": true,
            "global": false,
          },
          "loadSprite": true,
          "seekTime": 10,
          "showPosterOnEnd": false,
          "storage": Object {
            "enabled": true,
            "key": "plyr_volume",
          },
          "tooltips": Object {
            "controls": false,
            "seek": true,
          },
          "type": "vimeo",
          "videoId": "https://vimeo.com/189789787",
          "volume": 5,
        },
        "refs": Object {},
        "restart": [Function],
        "state": null,
        "stop": [Function],
        "toggleMute": [Function],
        "togglePlay": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="react-plyr"
          style={undefined}
>
          <div
                    data-type="vimeo"
                    data-video-id="https://vimeo.com/189789787"
          />
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="react-plyr"
          style={undefined}
>
          <div
                    data-type="vimeo"
                    data-video-id="https://vimeo.com/189789787"
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Plyr
    autoplay={false}
    clickToPlay={true}
    controls={
        Array [
            "play-large",
            "play",
            "progress",
            "current-time",
            "mute",
            "volume",
            "captions",
            "fullscreen",
          ]
    }
    debug={false}
    disableContextMenu={true}
    displayDuration={true}
    duration={null}
    enabled={true}
    hideControls={true}
    iconPrefix="plyr"
    iconUrl={null}
    keyboardShortcuts={
        Object {
            "focused": true,
            "global": false,
          }
    }
    loadSprite={true}
    seekTime={10}
    showPosterOnEnd={false}
    storage={
        Object {
            "enabled": true,
            "key": "plyr_volume",
          }
    }
    tooltips={
        Object {
            "controls": false,
            "seek": true,
          }
    }
    type="vimeo"
    videoId="https://vimeo.com/189789787"
    volume={5}
/>,
}
`;

exports[`renders a simple Youtube Video 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="react-plyr"
    style={undefined}
>
    <div
        data-type="youtube"
        data-video-id="CDFN1VatiJA"
    />
</div>,
  "nodes": Array [
    <div
      className="react-plyr"
      style={undefined}
>
      <div
            data-type="youtube"
            data-video-id="CDFN1VatiJA"
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Plyr
        autoplay={false}
        clickToPlay={true}
        controls={
                Array [
                        "play-large",
                        "play",
                        "progress",
                        "current-time",
                        "mute",
                        "volume",
                        "captions",
                        "fullscreen",
                      ]
        }
        debug={false}
        disableContextMenu={true}
        displayDuration={true}
        duration={null}
        enabled={true}
        hideControls={true}
        iconPrefix="plyr"
        iconUrl={null}
        keyboardShortcuts={
                Object {
                        "focused": true,
                        "global": false,
                      }
        }
        loadSprite={true}
        seekTime={10}
        showPosterOnEnd={false}
        storage={
                Object {
                        "enabled": true,
                        "key": "plyr_volume",
                      }
        }
        tooltips={
                Object {
                        "controls": false,
                        "seek": true,
                      }
        }
        type="youtube"
        videoId="CDFN1VatiJA"
        volume={5}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Plyr {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "getCurrentTime": [Function],
        "getDuration": [Function],
        "getType": [Function],
        "getVolume": [Function],
        "isMuted": [Function],
        "isPaused": [Function],
        "isReady": [Function],
        "pause": [Function],
        "play": [Function],
        "player": null,
        "props": Object {
          "autoplay": false,
          "clickToPlay": true,
          "controls": Array [
            "play-large",
            "play",
            "progress",
            "current-time",
            "mute",
            "volume",
            "captions",
            "fullscreen",
          ],
          "debug": false,
          "disableContextMenu": true,
          "displayDuration": true,
          "duration": null,
          "enabled": true,
          "hideControls": true,
          "iconPrefix": "plyr",
          "iconUrl": null,
          "keyboardShortcuts": Object {
            "focused": true,
            "global": false,
          },
          "loadSprite": true,
          "seekTime": 10,
          "showPosterOnEnd": false,
          "storage": Object {
            "enabled": true,
            "key": "plyr_volume",
          },
          "tooltips": Object {
            "controls": false,
            "seek": true,
          },
          "type": "youtube",
          "videoId": "CDFN1VatiJA",
          "volume": 5,
        },
        "refs": Object {},
        "restart": [Function],
        "state": null,
        "stop": [Function],
        "toggleMute": [Function],
        "togglePlay": [Function],
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="react-plyr"
          style={undefined}
>
          <div
                    data-type="youtube"
                    data-video-id="CDFN1VatiJA"
          />
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="react-plyr"
          style={undefined}
>
          <div
                    data-type="youtube"
                    data-video-id="CDFN1VatiJA"
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Plyr
    autoplay={false}
    clickToPlay={true}
    controls={
        Array [
            "play-large",
            "play",
            "progress",
            "current-time",
            "mute",
            "volume",
            "captions",
            "fullscreen",
          ]
    }
    debug={false}
    disableContextMenu={true}
    displayDuration={true}
    duration={null}
    enabled={true}
    hideControls={true}
    iconPrefix="plyr"
    iconUrl={null}
    keyboardShortcuts={
        Object {
            "focused": true,
            "global": false,
          }
    }
    loadSprite={true}
    seekTime={10}
    showPosterOnEnd={false}
    storage={
        Object {
            "enabled": true,
            "key": "plyr_volume",
          }
    }
    tooltips={
        Object {
            "controls": false,
            "seek": true,
          }
    }
    type="youtube"
    videoId="CDFN1VatiJA"
    volume={5}
/>,
}
`;
